update run.bat